[package]
name = "labx-rs"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name="labx"

crate-type = ["cdylib"]

[dependencies]
zip = "*"
quick-xml = {version="0.27.1"}
fast-float = "*"
pyo3 = { version = "0.18.2", features = ["extension-module"] }